MOSIP-35959 updated uniqueIdentifier for Pre-reg
Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

--- a/api-test/src/main/resources/preReg/ValidateOtp/ValidateOtp.yml
+++ b/api-test/src/main/resources/preReg/ValidateOtp/ValidateOtp.yml
@@ -1,130 +1,137 @@
 ValidateOtp:
-   Prereg_ValidateOtp_All_Valid_Smoke_email_sid:
-      endPoint: /preregistration/v1/login/validateOtp
-      uniqueIdentifier: TC_prereg_ValidateOtp_01
-      description: Validating OTP with a valid phone number
-      role: batch
-      checkErrorsOnlyInResponse: true
-      restMethod: post
-      inputTemplate: preReg/ValidateOtp/validateOtp
-      outputTemplate: preReg/ValidateOtp/validateOtpResult
-      input: '{
-  "version": "1.0",
-  "requesttime": "$TIMESTAMP$",
-  "userId": "john.doe@mailinator.com",
-  "otp": "DYNAMICOTP",
-  "id": "mosip.pre-registration.login.useridotp"
-}'
-      output: '{
-}'
-   Prereg_ValidateOtp_All_Valid_Smoke_Phone_sid:
-      endPoint: /preregistration/v1/login/validateOtp
-      uniqueIdentifier: TC_prereg_ValidateOtp_02
-      description: Validating OTP with an invalid phone number
-      role: batch
-      checkErrorsOnlyInResponse: true
-      restMethod: post
-      inputTemplate: preReg/ValidateOtp/validateOtp
-      outputTemplate: preReg/ValidateOtp/validateOtpResult
-      input: '{
-  "version": "1.0",
-  "requesttime": "$TIMESTAMP$",
-  "userId": "9090872300",
-  "otp": "DYNAMICOTP",
-  "id": "mosip.pre-registration.login.useridotp"
-}'
-      output: '{
-}'
+  Prereg_ValidateOtp_All_Valid_Smoke_email_sid:
+    endPoint: /preregistration/v1/login/validateOtp
+	uniqueIdentifier: TC_prereg_ValidateOtp_01
+    description: Validating OTP with a valid phone number
+    role: batch
+    checkErrorsOnlyInResponse: true
+    restMethod: post
+    inputTemplate: preReg/ValidateOtp/validateOtp
+    outputTemplate: preReg/ValidateOtp/validateOtpResult
+    input: '{
+      "version": "1.0",
+      "requesttime": "$TIMESTAMP$",
+      "userId": "john.doe@mailinator.com",
+      "otp": "DYNAMICOTP",
+      "id": "mosip.pre-registration.login.useridotp"
+    }'
+    output: '{}'
 
-   Prereg_ValidateOtp_Invalid_Phone_Neg_INVALIDOTP:
-      endPoint: /preregistration/v1/login/validateOtp
-      uniqueIdentifier: TC_prereg_ValidateOtp_03
-      description: Validating OTP with a phone number containing special characters
-      role: batch
-      checkErrorsOnlyInResponse: true
-      restMethod: post
-      inputTemplate: preReg/ValidateOtp/validateOtp
-      outputTemplate: preReg/error
-      input: '{
-  "version": "1.0",
-  "requesttime": "$TIMESTAMP$",
-  "userId": "909",
-  "otp": "DYNAMICOTP",
-  "id": "mosip.pre-registration.login.useridotp"
-}'
-      output: '{
-       "errors": [
-    {
-      "errorCode": "PRG_PAM_LGN_013"
-    }
-  ]
-}'
-   Prereg_ValidateOtp_SpacialCharacters_Phone_Neg_INVALIDOTP:
-      endPoint: /preregistration/v1/login/validateOtp
-      uniqueIdentifier: TC_prereg_ValidateOtp_04
-      description: validating OPT with valid email address
-      role: batch
-      checkErrorsOnlyInResponse: true
-      restMethod: post
-      inputTemplate: preReg/ValidateOtp/validateOtp
-      outputTemplate: preReg/error
-      input: '{
-  "version": "1.0",
-  "requesttime": "$TIMESTAMP$",
-  "userId": "$!(",
-  "otp": "DYNAMICOTP",
-  "id": "mosip.pre-registration.login.useridotp"
-}'
-      output: '{
-       "errors": [
-    {
-      "errorCode": "PRG_PAM_LGN_013"
-    }
-  ]
-}'
-   Prereg_ValidateOtp_SpacialCharacters_Email_Neg_INVALIDOTP:
-      endPoint: /preregistration/v1/login/validateOtp
-      uniqueIdentifier: TC_prereg_ValidateOtp_05
-      description: Validating OTP with an email address containing special characters
-      role: batch
-      checkErrorsOnlyInResponse: true
-      restMethod: post
-      inputTemplate: preReg/ValidateOtp/validateOtp
-      outputTemplate: preReg/error
-      input: '{
-  "version": "1.0",
-  "requesttime": "$TIMESTAMP$",
-  "userId": "john.doe@mail$!inator.com",
-  "otp": "DYNAMICOTP",
-  "id": "mosip.pre-registration.login.useridotp"
-}'
-      output: '{
-       "errors": [
-    {
-      "errorCode": "PRG_PAM_LGN_013"
-    }
-  ]
-}'
-   Prereg_ValidateOtp_Invalid_Email_Neg_INVALIDOTP:
-      endPoint: /preregistration/v1/login/validateOtp
-      uniqueIdentifier: TC_prereg_ValidateOtp_06
-      description: Validating OTP with an invalid email address
-      role: batch
-      checkErrorsOnlyInResponse: true
-      restMethod: post
-      inputTemplate: preReg/ValidateOtp/validateOtp
-      outputTemplate: preReg/error
-      input: '{
-  "version": "1.0",
-  "requesttime": "$TIMESTAMP$",
-  "userId": "joh23",
-  "otp": "DYNAMICOTP",
-  "id": "mosip.pre-registration.login.useridotp"
-}'
-      output: '{
-       "errors": [
-    {
-      "errorCode": "PRG_PAM_LGN_013"
-    }
-  ]
-}'
+  Prereg_ValidateOtp_All_Valid_Smoke_Phone_sid:
+    endPoint: /preregistration/v1/login/validateOtp
+	uniqueIdentifier: TC_prereg_ValidateOtp_02
+    description: Validating OTP with an invalid phone number
+    role: batch
+    restMethod: post
+    inputTemplate: preReg/ValidateOtp/validateOtp
+    outputTemplate: preReg/error
+    input: '{
+      "version": "1.0",
+      "requesttime": "$TIMESTAMP$",
+      "userId": "9090872300",
+      "otp": "DYNAMICOTP",
+      "id": "mosip.pre-registration.login.useridotp"
+    }'
+    output: '{
+      "errors": [
+        {
+          "errorCode": "KER-OTV-005"
+        }
+      ]
+    }'
+
+  Prereg_ValidateOtp_Invalid_Phone_Neg_INVALIDOTP:
+    endPoint: /preregistration/v1/login/validateOtp
+	uniqueIdentifier: TC_prereg_ValidateOtp_03
+    description: Validating OTP with a phone number containing special characters
+    role: batch
+    checkErrorsOnlyInResponse: true
+    restMethod: post
+    inputTemplate: preReg/ValidateOtp/validateOtp
+    outputTemplate: preReg/error
+    input: '{
+      "version": "1.0",
+      "requesttime": "$TIMESTAMP$",
+      "userId": "909",
+      "otp": "DYNAMICOTP",
+      "id": "mosip.pre-registration.login.useridotp"
+    }'
+    output: '{
+      "errors": [
+        {
+          "errorCode": "KER-OTV-005"
+        }
+      ]
+    }'
+
+  Prereg_ValidateOtp_SpacialCharacters_Phone_Neg_INVALIDOTP:
+    endPoint: /preregistration/v1/login/validateOtp
+	uniqueIdentifier: TC_prereg_ValidateOtp_04
+    description: Validating OTP with a valid email address
+    role: batch
+    checkErrorsOnlyInResponse: true
+    restMethod: post
+    inputTemplate: preReg/ValidateOtp/validateOtp
+    outputTemplate: preReg/error
+    input: '{
+      "version": "1.0",
+      "requesttime": "$TIMESTAMP$",
+      "userId": "$!(",
+      "otp": "DYNAMICOTP",
+      "id": "mosip.pre-registration.login.useridotp"
+    }'
+    output: '{
+      "errors": [
+        {
+          "errorCode": "KER-OTV-005"
+        }
+      ]
+    }'
+
+  Prereg_ValidateOtp_SpacialCharacters_Email_Neg_INVALIDOTP:
+    endPoint: /preregistration/v1/login/validateOtp
+	uniqueIdentifier: TC_prereg_ValidateOtp_05
+    description: Validating OTP with an email address containing special characters
+    role: batch
+    checkErrorsOnlyInResponse: true
+    restMethod: post
+    inputTemplate: preReg/ValidateOtp/validateOtp
+    outputTemplate: preReg/error
+    input: '{
+      "version": "1.0",
+      "requesttime": "$TIMESTAMP$",
+      "userId": "john.doe@mail$!inator.com",
+      "otp": "DYNAMICOTP",
+      "id": "mosip.pre-registration.login.useridotp"
+    }'
+    output: '{
+      "errors": [
+        {
+          "errorCode": "KER-OTV-005"
+        }
+      ]
+    }'
+
+  Prereg_ValidateOtp_Invalid_Email_Neg_INVALIDOTP:
+    endPoint: /preregistration/v1/login/validateOtp
+	uniqueIdentifier: TC_prereg_ValidateOtp_06
+    description: Validating OTP with an invalid email address
+    role: batch
+    checkErrorsOnlyInResponse: true
+    restMethod: post
+    inputTemplate: preReg/ValidateOtp/validateOtp
+    outputTemplate: preReg/error
+    input: '{
+      "version": "1.0",
+      "requesttime": "$TIMESTAMP$",
+      "userId": "joh23",
+      "otp": "DYNAMICOTP",
+      "id": "mosip.pre-registration.login.useridotp"
+    }'
+    output: '{
+      "errors": [
+        {
+          "errorCode": "KER-OTV-005"
+        }
+      ]
+    }'
