--- a/api-test/src/main/resources/preReg/createPrereg/createPrereg.yml
+++ b/api-test/src/main/resources/preReg/createPrereg/createPrereg.yml
@@ -537,7 +537,7 @@ CreatePrereg:
     }
   ]
 }'
-   Prereg_CreatePrereg_Invalid_OTP_Neg:
+   Prereg_CreatePrereg_Invalid_OTP_Neg_StatusCode:
       endPoint: /preregistration/v1/applications/prereg
       description: Creating preregistration with an invalid OTP
       role: invalidBatch
@@ -557,13 +557,8 @@ CreatePrereg:
   "requesttime": "$TIMESTAMP$",
   "id": "mosip.pre-registration.demographic.create"
 }'
-      output: '{
-      "errors": [
-    {
-      "errorCode": "KER-IOV-004"
-    }
-  ]
-}'   
+      output: "500"
+
    Prereg_CreatePrereg_All_Valid_Smoke_date_verification_sid:
       endPoint: /preregistration/v1/applications/prereg
       description: Creating preregistration with an invalid OTP
