--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -104,16 +104,22 @@ jobs:
           - SERVICE_NAME: 'pre-registration-datasync-service'
           - SERVICE_NAME: 'pre-registration-captcha-service'
     steps:
+      - name: Set environment variables
+        run: |
+          echo "SERVICE_NAME=${{ matrix.SERVICE_NAME }}" >> $GITHUB_ENV
+          echo "VERSION=latest" >> $GITHUB_ENV
+
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: 'docker.io/your_dockerhub_namespace/${{ matrix.SERVICE_NAME }}:latest'
+          image-ref: 'docker.io/${{ env.SERVICE_NAME }}:${{ env.VERSION }}'
           format: 'sarif'
-          output: 'trivy-report-${{ matrix.SERVICE_NAME }}.sarif'
-      - name: Upload SARIF file
-        uses: actions/upload-artifact@v3
+          output: 'trivy-results.sarif'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
         with:
-          name: trivy-report-${{ matrix.SERVICE_NAME }}
-          path: trivy-report-${{ matrix.SERVICE_NAME }}.sarif
+          sarif_file: 'trivy-results.sarif'
