--- a/api-test/src/main/resources/preReg/GetBookingsForRegCenter/GetBookingsForRegCenter.yml
+++ b/api-test/src/main/resources/preReg/GetBookingsForRegCenter/GetBookingsForRegCenter.yml
@@ -14,7 +14,7 @@ GetBookingsForRegCenter:
   "regCenterId": "10003"
 }'
    Prereg_GetBookingsForRegCenter_with_InValid_date_format:
-      endPoint: /preregistration/v1/applications/bookings/{regCenterId}?appointmentDate=2020-10-01&appointmentToDate=2034-10-13
+      endPoint: /preregistration/v1/applications/bookings/{regCenterId}?from_date=2020-45461&to_date=2034-10-13
       uniqueIdentifier: TC_prereg_GetBookingsForRegCenter_02
       description: Retrieve booking for a registration center with an invalid date format
       role: batch
@@ -32,7 +32,7 @@ GetBookingsForRegCenter:
   ]
 }'
    Prereg_GetBookingsForRegCenter_with_InValid_regcenter:
-      endPoint: /preregistration/v1/applications/bookings/{regCenterId}?from_date=2020-10-01&to_date=2034-10-13
+      endPoint: /preregistration/v1/applications/bookings/{regCenterId}?appointmentDate=2020-10-01&appointmentToDate=2034-10-13
       uniqueIdentifier: TC_prereg_GetBookingsForRegCenter_03
       description: Retrieve booking for a registration center with an invalid registration center ID
       role: batch
