MOSIP-35959 updated uniqueIdentifier for Pre-reg (#738)
* MOSIP-35959 updated uniqueIdentifier for Pre-reg

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-35959 updated uniqueIdentifier for Pre-reg

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-35959 updated uniqueIdentifier for Pre-reg

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* Update createPrereg.yml

Signed-off-by: gopalaswin <167510433+gopalaswin@users.noreply.github.com>

* MOSIP-35959 updated uniqueIdentifier for Pre-reg

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-35959 updated uniqueIdentifier for Pre-reg

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

* MOSIP-35959 updated uniqueIdentifier for Pre-reg

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>

---------

Signed-off-by: gopalaswin <Aswingopal30@gmail.com>
Signed-off-by: gopalaswin <167510433+gopalaswin@users.noreply.github.com>

--- a/api-test/src/main/resources/preReg/SendNotifications/SendNotifications.yml
+++ b/api-test/src/main/resources/preReg/SendNotifications/SendNotifications.yml
@@ -1,7 +1,8 @@
 SendNotifications:
    Prereg_SendNotifications_All_Valid_Smoke:
-      description: Trigger notification with valid data
       endPoint: /preregistration/v1/notification/notify
+      uniqueIdentifier: TC_prereg_SendNotifications_01
+      description: Trigger notification with valid data
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
@@ -23,6 +24,7 @@ SendNotifications:
 }'
    Prereg_SendNotifications_Notify_All_Valid_Smoke:
       endPoint: /preregistration/v1/notification/notify
+      uniqueIdentifier: TC_prereg_SendNotifications_02
       description: Trigger notification to notify with valid data
       role: batch
       checkErrorsOnlyInResponse: true
@@ -45,6 +47,7 @@ SendNotifications:
 }'
    Prereg_SendNotifications_InValid_id:
       endPoint: /preregistration/v1/notification
+      uniqueIdentifier: TC_prereg_SendNotifications_03
       description: Trigger notification with an invalid ID
       role: batch
       restMethod: post
@@ -72,6 +75,7 @@ SendNotifications:
 }'
    Prereg_SendNotifications_InValid_preRegId:
       endPoint: /preregistration/v1/notification
+      uniqueIdentifier: TC_prereg_SendNotifications_04
       description: Trigger notification with an invalid pre-registration ID
       role: batch
       restMethod: post
