--- a/api-test/src/main/resources/preReg/createPrereg/createPrereg.yml
+++ b/api-test/src/main/resources/preReg/createPrereg/createPrereg.yml
@@ -1,6 +1,7 @@
 CreatePrereg:
    Prereg_CreatePrereg_All_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_01
       description: Creating demographic details with valid data
       role: batch
       checkErrorsOnlyInResponse: true
@@ -22,6 +23,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_book_appoinment_without_update_prereg_status_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_02
       description: Creating preregistration for booking an appointment without updating preregistration status
       role: batch
       checkErrorsOnlyInResponse: true
@@ -43,6 +45,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_All_Valid_Smoke_UpdateDocRefID_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_03
       description: Creating preregistration with a valid updated document reference ID
       role: batch
       checkErrorsOnlyInResponse: true
@@ -65,6 +68,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_All_Valid_Smoke_BookByPRID_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_04
       description: Creating preregistration for a valid booking using the PRID (Patient Registration ID)
       role: batch
       checkErrorsOnlyInResponse: true
@@ -88,6 +92,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Valid_Smoke_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_05
       description: Creating demographic details with valid data
       role: batch
       checkErrorsOnlyInResponse: true
@@ -110,6 +115,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Smoke_alldel_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_06
       description: Creating preregistration to delete data
       role: batch
       checkErrorsOnlyInResponse: true
@@ -132,6 +138,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Smoke_CancellAppointment_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_07
       description: Creating preregistration data to cancel a booked appointment
       role: batch
       checkErrorsOnlyInResponse: true
@@ -154,6 +161,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Smoke_CancelApplicationsAppointment_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_08
       description: Creating preregistration and cancelling the appointment after booking
       role: batch
       checkErrorsOnlyInResponse: true
@@ -176,6 +184,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_All_Valid_Smoke_for_expiry_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_09
       description: Creating preregistration, booking an appointment, and checking the expiration status if the user does not reach the center by the scheduled slot time
       role: batch
       checkErrorsOnlyInResponse: true
@@ -197,6 +206,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_in_Valid_id_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_10
       description: Creating demographic details with an invalid field ID
       role: batch
       restMethod: post
@@ -223,6 +233,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_missing_id_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_11
       description: Creating preregistration with a missing ID
       role: batch
       restMethod: post
@@ -249,6 +260,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_blank_id_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_12
       description: Creating preregistration with a blank ID
       role: batch
       restMethod: post
@@ -275,6 +287,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_missing_langCode_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_13
       description: Creating preregistration without specifying a langcode
       role: batch
       restMethod: post
@@ -301,6 +314,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_invalid_langCode_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_14
       description: Creating preregistration with an invalid langcode 
       role: batch
       restMethod: post
@@ -327,6 +341,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_invalid_email_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_15
       description: Creating preregistration with an invalid email address
       role: batch
       restMethod: post
@@ -353,6 +368,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_invalid_requesttime_format_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_16
       description: Creating preregistration with an invalid request-time format
       role: batch
       restMethod: post
@@ -379,6 +395,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_missing_requesttime_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_17
       description: Creating preregistration without specifying a request time
       role: batch
       restMethod: post
@@ -405,6 +422,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_previous_date_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_18
       description: Creating preregistration with a previous date
       role: batch
       restMethod: post
@@ -431,6 +449,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_invalid_version_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_19
       description: Creating preregistration with an invalid version
       role: batch
       restMethod: post
@@ -457,6 +476,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_missing_version_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_20
       description: Creating preregistration without specifying a version
       role: batch
       restMethod: post
@@ -484,6 +504,7 @@ CreatePrereg:
 
    Prereg_CreatePrereg_Invalid_PostalCode_Neg:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_21
       description: Creating preregistration with an invalid postal code
       role: batch
       checkErrorsOnlyInResponse: true
@@ -512,6 +533,7 @@ CreatePrereg:
 
    Prereg_CreatePrereg_SpacialCharacter_PostalCode_Neg:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_22
       description: Creating preregistration with a special character in the postal code
       role: batch
       checkErrorsOnlyInResponse: true
@@ -539,6 +561,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Invalid_OTP_Neg_StatusCode:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_23
       description: Creating preregistration with an invalid OTP
       role: invalidBatch
       checkErrorsOnlyInResponse: true
@@ -561,7 +584,8 @@ CreatePrereg:
 
    Prereg_CreatePrereg_All_Valid_Smoke_date_verification_sid:
       endPoint: /preregistration/v1/applications/prereg
-      description: Creating preregistration with an invalid OTP
+      uniqueIdentifier: TC_Prereg_CreatePrereg_24
+      description: Creating a preregistration process with accurate data verification
       role: batch
       checkErrorsOnlyInResponse: true
       restMethod: post
@@ -582,6 +606,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_with_special_characters_date:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_25
       description: Creating preregistration with special characters on the date filed 
       role: batch 
       checkErrorsOnlyInResponse: true
@@ -608,6 +633,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_with_future_date:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_26
       description: Creating preregistration with a future date
       role: batch
       checkErrorsOnlyInResponse: true
@@ -629,6 +655,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_cancell_incomplete_prid_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_27
       description: Creating preregistration and canceling the incomplete PRID
       role: batch
       checkErrorsOnlyInResponse: true
@@ -650,6 +677,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_cancell_pending_appoinment_prid_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_28
       description: Creating preregistration and canceling pending appointment using PRID
       role: batch 
       checkErrorsOnlyInResponse: true
@@ -671,6 +699,7 @@ CreatePrereg:
 }'
    Prereg_CreatePrereg_Smoke_PreRegDemographicData_sid:
       endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_29
       description: Creating preregistration appointment using PRID for demographic data
       role: batch
       checkErrorsOnlyInResponse: true
