--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -204,7 +204,7 @@ jobs:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
   call-trivy-scan:
-    uses: mosip/kattu/.github/workflows/trivy.yml@develop
+    uses: rajapandi1234/kattu/.github/workflows/trivy.yml@master
     with:
-            service_name: 'apitest-prereg'
+            service_name: 'pre-registration-application-service'
             version: 'latest'
