--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -216,4 +216,4 @@ jobs:
 
      with:
       service_name: ${{ matrix.SERVICE_NAME }}
-      version: $'{{ github.ref_name }}'
+      version: ${{ github.ref_name }}
