--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -188,17 +188,36 @@ jobs:
       RELEASE_DOCKER_HUB: ${{ secrets.RELEASE_DOCKER_HUB }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
-  sonar_analysis_apitest_prereg:
-    needs: build-maven-apitest-prereg
-    if: "${{  github.event_name != 'pull_request' }}"
-    uses: mosip/kattu/.github/workflows/maven-sonar-analysis.yml@master-java21
-    with:
-      SERVICE_LOCATION: ./api-test
-    secrets:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      ORG_KEY: ${{ secrets.ORG_KEY }}
-      OSSRH_USER: ${{ secrets.OSSRH_USER }}
-      OSSRH_SECRET: ${{ secrets.OSSRH_SECRET }}
-      OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
-      GPG_SECRET: ${{ secrets.GPG_SECRET }}
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+  sonar_analysis_for_prereg_and_testrig:
+    name: Sonar Analysis for Pre-Reg and Test Rig
+    needs:
+      - build-maven-pre-registration
+      - build-maven-apitest-prereg
+    if: "${{ github.event_name != 'pull_request' }}"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sonar Analysis for Pre-Registration
+        uses: mosip/kattu/.github/workflows/maven-sonar-analysis.yml@master-java21
+        with:
+          SERVICE_LOCATION: ./pre-registration
+        secrets:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          ORG_KEY: ${{ secrets.ORG_KEY }}
+          OSSRH_USER: ${{ secrets.OSSRH_USER }}
+          OSSRH_SECRET: ${{ secrets.OSSRH_SECRET }}
+          OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+          GPG_SECRET: ${{ secrets.GPG_SECRET }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+
+      - name: Sonar Analysis for API Test Rig
+        uses: mosip/kattu/.github/workflows/maven-sonar-analysis.yml@master-java21
+        with:
+          SERVICE_LOCATION: ./api-test
+        secrets:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          ORG_KEY: ${{ secrets.ORG_KEY }}
+          OSSRH_USER: ${{ secrets.OSSRH_USER }}
+          OSSRH_SECRET: ${{ secrets.OSSRH_SECRET }}
+          OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+          GPG_SECRET: ${{ secrets.GPG_SECRET }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
